<resources>
    <string name="app_name">LiPari</string>
    <string name="default_web_client_id">786154684558-9hmlps6ckjf98c83ge0flg0fo7mn1apm.apps.googleusercontent.com</string>
    <string name="action_settings">Settings</string>
    <string name="OK">OK</string>
    <string name="new_pari">New Pari</string>
    <string name="all">All challenges</string>
    <string name="my_pari">Which I\'m in</string>
    <string name="title_activity_details_pari">Pari Information</string>
    <string name="title_activity_check">Check and Send Results</string>
    <string name="connect_pari">Join Pari</string>
    <string name="title_activity_login_unesell_account">Login to Unesell Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_to_account">Login to Account</string>
    <string name="error_login_data">Invalid login data. Check email and password.</string>
    <string name="connect_error">Connection error. Check your internet connection.</string>
    <string name="host_error">Host error. Too many requests.</string>
    <string name="welcome">Welcome</string>
    <string name="auth_text">Sign in with Unesell Account</string>
    <string name="reg_text">Registration</string>
    <string name="user_text">User</string>
    <string name="active_pari">Active Pari</string>
    <string name="ect">...</string>
    <string name="Pari">Pari</string>
    <string name="Description">Details and Description</string>
    <string name="if_win">If Successful:</string>
    <string name="if_lose">If Defeated:</string>
    <string name="menu_information">Information</string>
    <string name="menu_comments">Comments</string>
    <string name="challenged">Challenged</string>
    <string name="acceptedChellenge">Accepted Challenge</string>
    <string name="zero_autor">No challenges thrown</string>
    <string name="zero_executor">No challenges accepted</string>
    <string name="new_pari_text">Create a New Pari</string>
    <string name="text_reg_informacion">Information Editor</string>
    <string name="pari_text_1">Pari Title</string>
    <string name="hint_post_1">The opponent must do</string>
    <string name="text_post_2">In case of fulfilling the Pari</string>
    <string name="hint_post_2">The initiator must</string>
    <string name="text_post_3">In case of defeat</string>
    <string name="hint_post_3">The opponent must</string>
    <string name="text_post_4">Sort by the executor\'s gender</string>
    <string name="text_post_5">Detailed description of the Pari</string>
    <string name="text_post_sub_5">Specify in detail what the executor, accepting your challenge, will have to do.</string>
    <string name="hint_post_5">Write what needs to be done in the Pari</string>
    <string name="text_post_6">Select Pari settings that will affect user interest.</string>
    <string name="expirience">Experience</string>
    <string name="create_pari">Create Pari</string>
    <string name="text_post_7">Pari available to everyone</string>
    <string name="server_connect">Connecting to the server</string>
    <string name="error_text_length">Fill in all fields to continue</string>
    <string name="ban_create">You cannot create a pari</string>
    <string name="ban_create_sub">You have an outstanding active pari, check it before creating a new pari.</string>
    <string name="init">Initiator</string>
    <string name="join_init">Throw a challenge</string>
    <string name="opponent">Executor</string>
    <string name="opponent_join">Accept Pari</string>
    <string name="money">coins</string>
    <string name="status_1">Searching for participants</string>
    <string name="status_2">Pari in progress</string>
    <string name="status_3">Pari failed. Waiting for punishment.</string>
    <string name="status_4">Punishment verification</string>
    <string name="status_5">Pari completed. Waiting for verification.</string>
    <string name="status_6">Pari completed</string>
    <string name="check">Sending confirmation</string>
    <string name="check_lose">Perform the punishment:</string>
    <string name="exe_send_check">Execution verification</string>
    <string name="exe_reward_check">What needs to be uploaded</string>
    <string name="rewardAutor">If the pari is completed, you must upload the following information:</string>
    <string name="check_win">Confirm completion</string>
    <string name="load_info">Loading information...</string>
    <string name="comments">Comments</string>
    <string name="no_comments">No comments yet</string>
    <string name="you_comment">Your comment</string>
    <string name="you_comment_send">Comment sent</string>
    <string name="join_pari_disclaimer">By confirming acceptance, you commit to fulfill the conditions within the specified timeframe.</string>
    <string name="menu_social">Social</string>
    <string name="voitCount">Votes</string>
    <string name="social_menu_text">Management and Results</string>
    <string name="card_title_voiting">User Voting</string>
    <string name="text_openbrowserpari">Open pari in browser</string>
    <string name="temp_text_voiting">You can vote for a participant on the pari page.</string>
    <string name="InformationControl">Participant Panel</string>
    <string name="controls_text">Controls</string>
    <string name="cursus_user">Contact the opponent</string>
    <string name="social_wait">Waiting for 2 participants to join.</string>
    <string name="social_exe_ok">Confirm execution</string>
    <string name="social_pari_lose">Accept defeat in pari</string>
    <string name="LoseTitle">Confirm defeat</string>
    <string name="LoseSubTitle">You are about to accept defeat.\n\nThis means your account will enter "Punishment" mode, and you are obliged to fulfill the conditions of defeat in the dispute. Until this happens, you will not be able to start or join other paris.</string>
    <string name="OkLoseExecute">Yes, accept defeat</string>
    <string name="Cansel">Cancel</string>
    <string name="thanks">Thank you!</string>
    <string name="succses_exit">You have logged out of your account</string>
    <string name="executor_lose_buttom">Send confirmation of completed punishment</string>
    <string name="evidence_text">Evidence</string>
    <string name="evidence_subtext">Write what is stated in the conditions or any other message intended for the initiator.</string>
    <string name="send_check">Send for verification</string>
    <string name="pari_rule">Pari conditions</string>
    <string name="pari_rule_sub">Check the condition you need to confirm the execution of.</string>
    <string name="check_text">Accompanying text</string>
    <string name="title_file_upliad">File upload</string>
    <string name="subtitle_file_upload">Select an image file that confirms the completion of the task.</string>
    <string name="send_upload">Sending information</string>
    <string name="manifestPerm">Permission required</string>
    <string name="manifest_perm_storage">External storage permission required</string>
    <string name="reward">Reward</string>
    <string name="reward_sub">If confirmed by the initiator, you will receive the following:</string>
    <string name="check_ansver_execute">Check the execution result</string>
    <string name="select_file">Select an image</string>
    <string name="exe_title_ForAutor">Executor`s response</string>
    <string name="exe_title_ForAutorSub">As confirmation, the executor provided the following information:</string>
    <string name="Title_uploaded_files">Uploaded files</string>
    <string name="subtitle_uploaded_files">The executor uploaded the following files as evidence.</string>
    <string name="Title_imageView">Image preview</string>
    <string name="close_gallary">Close preview</string>
    <string name="youprofile">Your profile</string>
    <string name="level">Level</string>
    <string name="account_exit">Log out of account</string>
    <string name="menu_ad">Get coins for ads</string>
    <string name="exitAccount_text_1">Log out of your account?</string>
    <string name="exitAccount_text_2">After this, you will need to log in again to access paris and your account.</string>
    <string name="exitAccount_text_3">Yes, log out</string>
    <string name="menu_add_money">Earn coins</string>
    <string name="m_title">Earn a coin</string>
    <string name="m_sub">Watch a short video and get 1 coin added to your account balance.</string>
    <string name="error_load_ad">Failed to load ad, please try again later.</string>
    <string name="ad_ok_title">Reward received</string>
    <string name="ad_ok_sub">Great, 1 coin has been added to your account!</string>
    <string name="todo">TODO</string>
    <string name="profile">Profile</string>
    <string name="about_me">About me</string>
    <string name="Auth_title">Create, accept, play.</string>
    <string name="Auth_subTitle">An unparalleled pari system. A social network for everyone.</string>
    <string name="google_singin">Sign in with Google account</string>
    <string name="welcome_modal_title">Before we start…</string>
    <string name="welcome_modal_sutitle">Hi, welcome to Lipari. This is a place where you can challenge your friends or random people from the internet. Choose an existing pari or create your own. We give you 500 XP to start with. But first, indicate your gender.\n\nGood luck!</string>
    <string name="man">I`m a guy</string>
    <string name="woomen">I`m a girl</string>
    <string name="regdate">With us since:</string>
    <string name="messanger_txt">Messages</string>
    <string name="assets_store_txt">Assets store</string>
    <string name="lipari_by_unesell_studio">LiPari | by Unesell Studio</string>
    <string name="Menu_txt">Menu</string>
    <string name="reward_txt">Achievements</string>
    <string name="nav_verison_text">Public early release.</string>
    <string name="share_message">I\'m participating in a cool challenge! Join:</string>
    <string name="share_title">Share with friends</string>
    <string name="copy_link_toast">Link copied!</string>
    <string name="download_image">Скачать</string>
    <string name="reward_lose_exe">Так как пари было провалено, компенсация исполнителю насчитывается следующим образом:</string>
    <string name="exe_lose_10_procent_win">Награда для исполнителя 10% от опыта.</string>
    <string name="image_downloaded_successfully">Image downloaded successfully</string>
    <string name="failed_to_download_image">Failed to download image</string>
    <string name="permission_denied_cannot_download_image">Permission denied, cannot download image</string>
    <string name="login_to_account_txt">Вход в учётную запись</string>
    <string name="app_name_long">LiPari - Социальная сеть</string>
    <string name="hello_1">Доброе утро,</string>
    <string name="hello_2">Добрый день,</string>
    <string name="hello_3">Добрый вечер,</string>
    <string name="balanse">Баланс</string>
    <string name="what_need_money_txt">Для чего нужны монеты?</string>
    <string name="what_need_money_1">Монеты - это внутриигровая валюта, предназначенная для покупки разных активов. С помощью них вы можете украсить свои пары, покупая фоны для ваших челленджей.</string>
    <string name="what_need_money_2">Вы можете получить монеты следующими способами:</string>
    <string name="what_need_money_3">● За повышение уровня</string>
    <string name="what_need_money_4">● За просмотр рекламы в приложении</string>
    <string name="spend_txt">Потратить</string>
    <string name="share_txt">Поделиться</string>
    <string name="share_sub_text">Скопируйте и отправьте ссылку своим друзьям!</string>
    <string name="copy_link">Скопировать ссылку</string>
    <string name="search_image">Поиск изображений</string>
    <string name="open_store_in_browser">Открыть магазин в браузере</string>
    <string name="end_images_txt">На этом всё, поищем что-нибудь ещё.</string>
</resources>