<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="20dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="20dp">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:backgroundTintMode="add"
                app:srcCompat="@drawable/app_icon_yellow" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/app_name"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    <Button
        android:id="@+id/messanger_btn"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Open_cursus"
        android:text="@string/messanger_txt"
        android:textSize="16sp"
        app:icon="@drawable/mess" />

    <Button
        android:id="@+id/assets_btn"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Open_store"
        android:text="@string/assets_store_txt"
        android:textSize="16sp"
        app:icon="@drawable/store" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="15dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lipari_by_unesell_studio"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nav_verison_text"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>
