<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Material3.DynamicColors.DayNight"
    tools:context=".Create_Pari_Post">

    <ProgressBar
        android:id="@+id/loadingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="visible" />

    <TextView
        android:id="@+id/server_connect_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/server_connect"
        android:translationY="40dp"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/mainBackground2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:contentDescription="Background"
        android:scaleType="centerCrop"
        app:layout_collapseMode="parallax"
        app:layout_collapseParallaxMultiplier="0.5"
        app:srcCompat="@drawable/abstract_lines"
        tools:ignore="HardcodedText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:text="@string/new_pari_text"
        android:textSize="28sp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:text="@string/text_reg_informacion"
        android:textSize="14sp"
        android:textStyle="normal|bold" />

    <ScrollView
        android:id="@+id/PostFirm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="25dp"
            android:paddingTop="10dp"
            android:paddingRight="25dp">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pari_text_1" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Post_Name"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_post_1" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_post_2" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Post_Init"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_post_2" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_post_3" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Post_Opponent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_post_3" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_post_4" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.card.MaterialCardView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_post_5"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_post_sub_5" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Post_Info"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="148dp"
                    android:hint="@string/hint_post_5" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_settings"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_post_6" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.card.MaterialCardView
                            style="?attr/materialCardViewElevatedStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:layout_marginEnd="15dp"
                            android:backgroundTint="@color/purple_200"
                            android:focusable="true"
                            android:theme="@style/Theme.Material3.DayNight"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                android:id="@+id/xp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:layout_marginTop="2dp"
                                android:layout_marginRight="5dp"
                                android:layout_marginBottom="2dp"
                                android:text="100 XP"
                                android:textAppearance="?attr/textAppearanceBodyMedium"
                                android:textColor="?attr/colorSurface"
                                android:textSize="14sp"
                                android:textStyle="bold" />
                        </com.google.android.material.card.MaterialCardView>

                        <TextView
                            android:id="@+id/textView19"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="15dp"
                            android:text="@string/expirience"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <SeekBar
                        android:id="@+id/seekBar"
                        style="@style/Widget.AppCompat.SeekBar.Discrete"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginBottom="10dp"
                        android:max="90"
                        android:progress="0" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="56dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.materialswitch.MaterialSwitch
                            android:id="@+id/switch_visible"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:checked="true"
                            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="18dp"
                        android:text="@string/text_post_7"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/create"
                    android:layout_width="168dp"
                    android:layout_height="wrap_content"
                    android:text="@string/create_pari"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:onClick="CreatePari"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>