<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundGravity="center_vertical"
    android:theme="@style/Theme.Material3.DynamicColors.DayNight"
    tools:context=".SplashScreen">

    <ImageView
        android:id="@+id/MainBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_collapseMode="parallax"
        app:layout_collapseParallaxMultiplier="0.5"
        android:contentDescription="Background"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:text="Жизнь без споров не бывает, так превратим рутину в игру"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/auth_text"
            android:textSize="16sp"
            android:onClick="OpenAuthPage"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/reg_text"
            android:textSize="16sp"
            android:onClick="WebReg"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>